--- a/cocina.html
+++ b/cocina.html
@@ -66,7 +66,7 @@
 
             <div class="container-xxl py-5 bg-dark hero-header mb-5">
                 <div class="container text-center my-5 pt-5 pb-4">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Mesero</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Cocina</h1>
                 </div>
             </div>
         </div>
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                     <h5 class="section-title ff-secondary text-center text-primary fw-normal">Perrito Panzon</h5>
-                    <h1 class="mb-5">Cocina</h1>
+                    <h1 class="mb-5">Ordenes</h1>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
